Edit: Typo Changes

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -21,6 +21,9 @@
             text-align: center;
             margin-top: 10px;
         }
+        span {
+            color: #ec4e39;
+          }
     }
     .plane{
         width: 100%;
@@ -67,11 +70,11 @@
             filter: brightness(0.5);
             img{
                 &:nth-of-type(1){
-                    left: 65%;
+                    left: 55%;
                     top: 2.5%;
                 }
                 &:nth-of-type(2){
-                    left: 40%;
+                    left: 32%;
                     top: 75%;
                 }
             }
