--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,11 @@
-body{
-    background-color: black;
-    margin: 0px;
+body {
+  font-family: "Avant Garde Book BT";
+  background-color: rgb(24, 24, 24);
+  margin: 0;
+}
+@font-face {
+  font-family: "Avant Garde Book BT";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../../public/fonts/AVGARDD_2.woff") format("woff");
 }
